unpackaged/main/default/objects/Allocations__c/Allocations__c.object-meta.xml
<CustomObject>
    <label>Allocation</label>
    <nameField>
        <displayFormat>AN-{000}</displayFormat>
        <label>Allocations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>