unpackaged/main/default/objects/Allocations__c/fields/Other_Account__c.field-meta.xml
<CustomField>
    <fullName>Other_Account__c</fullName>
    <label>Other Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BASIC LKSMTH</fullName>
            </value>
            <value>
                <fullName>BASIC MBR_CH</fullName>
            </value>
            <value>
                <fullName>BASIC OM</fullName>
            </value>
            <value>
                <fullName>BASIC TW</fullName>
            </value>
            <value>
                <fullName>BATT MATCH</fullName>
            </value>
            <value>
                <fullName>BATT WAR AGM</fullName>
            </value>
            <value>
                <fullName>BATT WARR</fullName>
            </value>
            <value>
                <fullName>ESCHEATED</fullName>
            </value>
            <value>
                <fullName>GOOD WILL</fullName>
            </value>
            <value>
                <fullName>GW AGM</fullName>
            </value>
            <value>
                <fullName>GW APPEAL</fullName>
            </value>
            <value>
                <fullName>GW CCDISP</fullName>
            </value>
            <value>
                <fullName>GW MMTM</fullName>
            </value>
            <value>
                <fullName>GW PB</fullName>
            </value>
            <value>
                <fullName>GW PC</fullName>
            </value>
            <value>
                <fullName>GW REIM</fullName>
            </value>
            <value>
                <fullName>GW RETAIL</fullName>
            </value>
            <value>
                <fullName>GW TP</fullName>
            </value>
            <value>
                <fullName>LEGL REIM</fullName>
            </value>
            <value>
                <fullName>PLUS LKSMTH</fullName>
            </value>
            <value>
                <fullName>PLUS TW</fullName>
            </value>
            <value>
                <fullName>PR 200 ML TW</fullName>
            </value>
            <value>
                <fullName>PR BAT AGM</fullName>
            </value>
            <value>
                <fullName>PR BATT REM</fullName>
            </value>
            <value>
                <fullName>PR HOM LKOT</fullName>
            </value>
            <value>
                <fullName>PR LKSMTH</fullName>
            </value>
            <value>
                <fullName>PR ONTHE WAY</fullName>
            </value>
            <value>
                <fullName>PR TOLLS</fullName>
            </value>
            <value>
                <fullName>RECOV COST</fullName>
            </value>
            <value>
                <fullName>TRAV ACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>