unpackaged/main/default/objects/Allocations__c/fields/Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement__c</fullName>
    <label>Reimbursement</label>
    <referenceTo>ACG_Reimbursement__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>