unpackaged/main/default/objects/Allocations__c/validationRules/Cannot_Edit_When_Ready_for_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_When_Ready_for_Payment</fullName>
    <active>true</active>
    <description>Prevents editing allocations when reimbursement is ready for payment</description>
    <errorConditionFormula>AND(
ISPICKVAL(Reimbursement__r.ACG_Status__c, &#39;Ready for Payment&#39;),
NOT( $Permission.Skip_Automation_Logic ))</errorConditionFormula>
    <errorMessage>You cannot edit an Allocation when the Reimbursement is Ready for Payment.</errorMessage>
</ValidationRule>